Fixed small CSS to hide forecast widget on mobile devices

--- a/cit230/lesson-7/styles/small-7.css
+++ b/cit230/lesson-7/styles/small-7.css
@@ -71,7 +71,7 @@ nav li a:hover {
 }
 
 @media screen and (max-width: 415px){
-    section#forecast {
+    #forecast {
         display: none;
     }
     
